# junebug

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  junebug.pc.in
examples/: CMakeLists.txt
examples/pong/: pong.cpp
examples/pong/assets/koopa/: koopa.json
include/: Actors.h  Background.h  Camera.h  Collisions.h  Color.h  Compatability.h  Component.h  Files.h  Game.h  GlobalGame.h  InputNames.h  Inputs.h  JGame.h  Junebug.h  Math.h  MathLib.h  RandLib.h  Rendering.h  Sprite.h  Tileset.h  Transitions.h  Twerp.h  Utils.h  color.h  components.h  junebug.h  mathLib.h  utils.h
include/components/: BoxCollider.h  Collider.h  CollisionComponent.h  OffscreenComponent.h  PhysicsComponent.h  PolygonCollider.h  PolygonCollisionComponent.h  Rigidbody.h  TileCollider.h  TileIndividualCollider.h
include/plugins/: DiscordPresence.h
lib/: Junebug.cpp  inputs.cpp
lib/Emscripten/: shell_minimal.html
lib/SDL_FontCache/: CMakeLists.txt
plugins/discord/: DiscordPresence.h
plugins/discord/discord_game_sdk/: types.h
scripts/web/: build.sh  preview.sh
src/: Camera.cpp  Component.cpp  Files.cpp  GlobalGame.cpp  JGame.cpp  Junebug.cpp  MathLib.cpp  RandLib.cpp  Rendering.cpp  Sprite.cpp  Utils.cpp  color.cpp  dataLoading.cpp  inputs.cpp  junebug.cpp  mathLib.cpp
src/Utils/: Twerp.cpp  Utils.cpp  dev.cpp  twerp.cpp
src/actors/: Actor.cpp  Background.cpp  PhysicalActor.cpp  PureActor.cpp  Tileset.cpp  Transitions.cpp  VisualActor.cpp
src/components/: BoxCollider.cpp  Collider.cpp  CollisionComponent.cpp  PhysicsComponent.cpp  PolygonCollider.cpp  PolygonCollisionComponent.cpp  Rigidbody.cpp  TileCollider.cpp  TileIndividualCollider.cpp
src/core/: Game.cpp  JGame.cpp  coreCollision.cpp  coreDataLoading.cpp  coreDebug.cpp  coreDefaultCallbacks.cpp  coreFonts.cpp  coreInputs.cpp  coreLoadActor.cpp  coreScenes.cpp  coreSprites.cpp
